test/libyul/yulSyntaxTests/invalid/swap_disallowed.yul
{
    swap0()
    swap1()
    swap2()
    swap3()
    swap4()
    swap5()
    swap6()
    swap7()
    swap8()
    swap9()
    swap10()
    swap11()
    swap12()
    swap13()
    swap14()
    swap15()
    swap16()
    swap32()
}
// ----
// DeclarationError 4619: (6-11): Function not found.
// TypeError 5017: (18-23): The identifier "swap1" can not be used.
// TypeError 5017: (30-35): The identifier "swap2" can not be used.
// TypeError 5017: (42-47): The identifier "swap3" can not be used.
// TypeError 5017: (54-59): The identifier "swap4" can not be used.
// TypeError 5017: (66-71): The identifier "swap5" can not be used.
// TypeError 5017: (78-83): The identifier "swap6" can not be used.
// TypeError 5017: (90-95): The identifier "swap7" can not be used.
// TypeError 5017: (102-107): The identifier "swap8" can not be used.
// TypeError 5017: (114-119): The identifier "swap9" can not be used.
// TypeError 5017: (126-132): The identifier "swap10" can not be used.
// TypeError 5017: (139-145): The identifier "swap11" can not be used.
// TypeError 5017: (152-158): The identifier "swap12" can not be used.
// TypeError 5017: (165-171): The identifier "swap13" can not be used.
// TypeError 5017: (178-184): The identifier "swap14" can not be used.
// TypeError 5017: (191-197): The identifier "swap15" can not be used.
// TypeError 5017: (204-210): The identifier "swap16" can not be used.
// DeclarationError 4619: (217-223): Function not found.
